--- a/app/views/AllowanceDeductedView.scala.html
+++ b/app/views/AllowanceDeductedView.scala.html
@@ -22,11 +22,17 @@
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
+    govukDetails: GovukDetails,
     govukInput: GovukInput,
     govukButton: GovukButton
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+
+@hintAndIntro=@{govukDetails(
+  Details(summary = HtmlContent(messages("allowanceDeducted.details")),
+  content = HtmlContent(messages("allowanceDeducted.details.text"))
+)) }
 
 @layout(pageTitle = title(form, messages("allowanceDeducted.title"))) {
 
@@ -44,6 +50,7 @@
             .withPrefix(PrefixOrSuffix(content = Text("£")))
             .withInputMode("decimal")
             .withWidth(Fixed10)
+            .withHint(HintViewModel(HtmlContent(hintAndIntro)))
         )
 
         @govukButton(
