--- a/app/views/CompanyLiabilitiesView.scala.html
+++ b/app/views/CompanyLiabilitiesView.scala.html
@@ -26,7 +26,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode,companyName: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode,companyName: String,startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("companyLiabilities.title"))) {
 
@@ -39,7 +39,7 @@
         @govukInput(
             InputViewModel(
                 field = form("value"),
-                label = LabelViewModel(messages("companyLiabilities.heading",companyName)).asPageHeading(LabelSize.Large)
+                label = LabelViewModel(messages("companyLiabilities.heading",companyName,startDate,endDate)).asPageHeading(LabelSize.Large)
             )
             .withPrefix(PrefixOrSuffix(content = Text("£")))
             .withInputMode("decimal")
