--- a/app/views/CompanyLiabilitiesView.scala.html
+++ b/app/views/CompanyLiabilitiesView.scala.html
@@ -26,11 +26,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode,companyName: String,startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, index: Index, companyName: String,startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("companyLiabilities.title"))) {
 
-    @formHelper(action = routes.CompanyLiabilitiesController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.CompanyLiabilitiesController.onSubmit(mode, index), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
