--- a/app/views/GroupLiabilityView.scala.html
+++ b/app/views/GroupLiabilityView.scala.html
@@ -26,9 +26,9 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, groupOrCompanyName: String,startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("groupLiability.title"))) {
+@layout(pageTitle = title(form, messages("groupLiability.title",groupOrCompanyName,startDate,endDate))) {
 
     @formHelper(action = routes.GroupLiabilityController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
@@ -39,7 +39,7 @@
         @govukInput(
             InputViewModel(
                 field = form("value"),
-                label = LabelViewModel(messages("groupLiability.heading")).asPageHeading(LabelSize.Large)
+                label = LabelViewModel(messages("groupLiability.heading",groupOrCompanyName,startDate,endDate)).asPageHeading(LabelSize.Large)
             )
             .withPrefix(PrefixOrSuffix(content = Text("£")))
             .withInputMode("decimal")
