--- a/app/views/SearchEngineLossView.scala.html
+++ b/app/views/SearchEngineLossView.scala.html
@@ -15,7 +15,6 @@
  *@
 
 @import viewmodels.LegendSize
-@import models.registration.Registration
 
 @this(
     layout: templates.Layout,
@@ -25,7 +24,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode,reg: Registration)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode,isGroupMessage: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("searchEngineLoss.title"))) {
 
@@ -38,7 +37,7 @@
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("searchEngineLoss.heading",reg.isGroupMessage)).asPageHeading(LegendSize.Large)
+                legend = LegendViewModel(messages("searchEngineLoss.heading",isGroupMessage)).asPageHeading(LegendSize.Large)
             )
              .inline()
         )
