--- a/app/views/ReportOnlineMarketplaceLossView.scala.html
+++ b/app/views/ReportOnlineMarketplaceLossView.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import viewmodels.LegendSize
+@import models.registration.Registration
 
 @this(
     layout: templates.Layout,
@@ -24,7 +25,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, reg: Registration)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("reportOnlineMarketplaceLoss.title"))) {
 
@@ -37,7 +38,7 @@
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("reportOnlineMarketplaceLoss.heading")).asPageHeading(LegendSize.Large)
+                legend = LegendViewModel(messages("reportOnlineMarketplaceLoss.heading", reg.isGroupMessage)).asPageHeading(LegendSize.Large)
             )
              .inline()
         )
