--- a/app/views/SearchEngineLossView.scala.html
+++ b/app/views/SearchEngineLossView.scala.html
@@ -26,7 +26,7 @@
 
 @(form: Form[_], mode: Mode,isGroupMessage: String)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("searchEngineLoss.title"))) {
+@layout(pageTitle = title(form, messages("searchEngineLoss.title",isGroupMessage))) {
 
     @formHelper(action = routes.SearchEngineLossController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
