--- a/app/views/RepaymentView.scala.html
+++ b/app/views/RepaymentView.scala.html
@@ -24,7 +24,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("repayment.title"))) {
 
@@ -37,7 +37,7 @@
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("repayment.heading")).asPageHeading(LegendSize.Large)
+                legend = LegendViewModel(messages("repayment.heading",startDate, endDate)).asPageHeading(LegendSize.Large)
             )
              .inline()
         )
