--- a/app/views/ReportOnlineMarketplaceLossView.scala.html
+++ b/app/views/ReportOnlineMarketplaceLossView.scala.html
@@ -27,7 +27,7 @@
 
 @(form: Form[_], mode: Mode, reg: Registration)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("reportOnlineMarketplaceLoss.title"))) {
+@layout(pageTitle = title(form, messages("reportOnlineMarketplaceLoss.title", reg.isGroupMessage))) {
 
     @formHelper(action = routes.ReportOnlineMarketplaceLossController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
