--- a/app/views/RepaymentView.scala.html
+++ b/app/views/RepaymentView.scala.html
@@ -26,7 +26,7 @@
 
 @(form: Form[_], mode: Mode, startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("repayment.title"))) {
+@layout(pageTitle = title(form, messages("repayment.title",startDate, endDate))) {
 
     @formHelper(action = routes.RepaymentController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
