--- a/app/views/CheckYourAnswersView.scala.html
+++ b/app/views/CheckYourAnswersView.scala.html
@@ -20,14 +20,14 @@
     govukButton: GovukButton
 )
 
-@(list: SummaryList,isPrint: Boolean)(implicit request: Request[_], messages: Messages)
+@(list: SummaryList,isPrint: Boolean = false)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("checkYourAnswers.title"))) {
 
     <h1 class="govuk-heading-l">@messages("checkYourAnswers.heading")</h1>
 
     @govukSummaryList(list)
-    @if(isPrint) {
+    @if(!isPrint) {
         @govukButton(
             ButtonViewModel(messages("checkYourAnswers.save-continue"))
         )
