unit tests fixed and added parm for cya

--- a/app/views/CheckYourAnswersView.scala.html
+++ b/app/views/CheckYourAnswersView.scala.html
@@ -30,6 +30,7 @@
     @if(!isPrint) {
         @govukButton(
             ButtonViewModel(messages("checkYourAnswers.save-continue"))
+            .asLink(routes.ReturnsCompleteController.onPageLoad().url)
         )
     }
 }
