--- a/.g8/percentagePage/app/views/$className$View.scala.html
+++ b/.g8/percentagePage/app/views/$className$View.scala.html
@@ -25,9 +25,11 @@
                 field = form("value"),
                 label = LabelViewModel(messages("$className;format="decap"$.heading")).asPageHeading(LabelSize.Large)
             )
-            .withPrefix(PrefixOrSuffix(content = Text("%")))
-            .withInputMode("decimal")
-            .withWidth(Fixed10)
+            .withPattern("[0-9]*")
+            .withSuffix(PrefixOrSuffix(content = Text("%")))
+            .withInputMode("numeric")
+            .withWidth(Fixed4)
+            .withHint(HintViewModel(messages("common.margin.hint")))
         )
 
         @govukButton(
