--- a/app/views/TimeOut.scala.html
+++ b/app/views/TimeOut.scala.html
@@ -22,7 +22,7 @@
 
 @()(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = messages("time-out.title").toString()) {
+@layout(pageTitle = messages("time-out.title").toString(), showBackLink = false) {
     <h1 class="govuk-heading-l">@messages("time-out.title")</h1>
 
     <p class="govuk-body">
