--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -79,7 +79,8 @@ refresh: Int = 0)(contentBlock: Html)(implicit request: Request[_], messages: Me
     headBlock = Some(head),
     headerBlock = Some(hmrcStandardHeader(
         serviceUrl  = Some(routes.ReturnsDashboardController.onPageLoad.url),
-        signOutUrl  = if(showSignOut) Some(controllers.auth.routes.AuthenticationController.signOut().url) else None
+        signOutUrl  = if(showSignOut) Some(controllers.auth.routes.AuthenticationController.signOut().url) else None,
+        displayHmrcBanner = true,
     )),
     beforeContentBlock = Some(beforeContent),
     footerBlock        = Some(hmrcStandardFooter()),
