--- a/app/views/SearchEngineLossView.scala.html
+++ b/app/views/SearchEngineLossView.scala.html
@@ -24,11 +24,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode,isGroupMessage: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periodKey: String, mode: Mode,isGroupMessage: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("searchEngineLoss.title",isGroupMessage))) {
 
-    @formHelper(action = routes.SearchEngineLossController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.SearchEngineLossController.onSubmit(periodKey, mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
