--- a/app/views/AllowanceDeductedView.scala.html
+++ b/app/views/AllowanceDeductedView.scala.html
@@ -27,7 +27,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periodKey: String, mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @hintAndIntro=@{govukDetails(
   Details(summary = HtmlContent(messages("allowanceDeducted.details")),
@@ -36,7 +36,7 @@
 
 @layout(pageTitle = title(form, messages("allowanceDeducted.title"))) {
 
-    @formHelper(action = routes.AllowanceDeductedController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.AllowanceDeductedController.onSubmit(periodKey, mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
