--- a/app/views/ReportSocialMediaOperatingMarginView.scala.html
+++ b/app/views/ReportSocialMediaOperatingMarginView.scala.html
@@ -26,11 +26,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, grpMessage: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periodKey: String, mode: Mode, grpMessage: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("reportSocialMediaOperatingMargin.title", grpMessage))) {
 
-    @formHelper(action = routes.ReportSocialMediaOperatingMarginController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.ReportSocialMediaOperatingMarginController.onSubmit(periodKey, mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
