--- a/app/views/IsRepaymentBankAccountUKView.scala.html
+++ b/app/views/IsRepaymentBankAccountUKView.scala.html
@@ -24,11 +24,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periodKey: String, mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("isRepaymentBankAccountUK.title"))) {
 
-    @formHelper(action = routes.IsRepaymentBankAccountUKController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.IsRepaymentBankAccountUKController.onSubmit(periodKey, mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
