--- a/app/views/RepaymentView.scala.html
+++ b/app/views/RepaymentView.scala.html
@@ -24,11 +24,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periodKey: String, mode: Mode, startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("repayment.title",startDate, endDate))) {
 
-    @formHelper(action = routes.RepaymentController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.RepaymentController.onSubmit(periodKey, mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
