--- a/app/views/ReportCrossBorderReliefView.scala.html
+++ b/app/views/ReportCrossBorderReliefView.scala.html
@@ -25,7 +25,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periodKey: String, mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @hintAndIntro=@{govukDetails(
     Details(summary = HtmlContent(messages("reportCrossBorderRelief.details")),
@@ -34,7 +34,7 @@
 
 @layout(pageTitle = title(form, messages("reportCrossBorderRelief.title"))) {
 
-    @formHelper(action = routes.ReportCrossBorderReliefController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.ReportCrossBorderReliefController.onSubmit(periodKey, mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
