--- a/app/views/ReportOnlineMarketplaceLossView.scala.html
+++ b/app/views/ReportOnlineMarketplaceLossView.scala.html
@@ -25,11 +25,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, reg: Registration)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periodKey: String, mode: Mode, reg: Registration)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("reportOnlineMarketplaceLoss.title", reg.isGroupMessage))) {
 
-    @formHelper(action = routes.ReportOnlineMarketplaceLossController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.ReportOnlineMarketplaceLossController.onSubmit(periodKey, mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
