--- a/app/views/ResubmitAReturnView.scala.html
+++ b/app/views/ResubmitAReturnView.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import viewmodels.LegendSize
+@import models.registration.Period
 
 @this(
     layout: templates.Layout,
@@ -24,11 +25,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], periods: List[Period])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("resubmitAReturn.title"))) {
 
-    @formHelper(action = routes.ResubmitAReturnController.onSubmit(mode), 'autoComplete -> "off") {
+    @formHelper(action = routes.ResubmitAReturnController.onSubmit(), 'autoComplete -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
@@ -38,7 +39,7 @@
             RadiosViewModel(
                 field  = form("value"),
                 legend = LegendViewModel(messages("resubmitAReturn.heading")).asPageHeading(LegendSize.Large),
-                items  = ResubmitAReturn.options
+                items  = ResubmitAReturn.options(periods)
             )
         )
 
