--- a/app/views/ReturnsDashboardView.scala.html
+++ b/app/views/ReturnsDashboardView.scala.html
@@ -121,7 +121,7 @@ showBackLink = false
                     @if(amended.nonEmpty) {
                     <li>
                         <p class="govuk-body">
-                            <a class="govuk-link" href="@routes.ResubmitAReturnController.onPageLoad().url">
+                            <a class="govuk-link" href="@routes.ResubmitAReturnController.onPageLoad.url">
                                 @messages("returnsDashboard.amendments")
                             </a>
                         </p>
