added missing hint text for the group-liability page

--- a/app/views/GroupLiabilityView.scala.html
+++ b/app/views/GroupLiabilityView.scala.html
@@ -44,6 +44,7 @@
             .withPrefix(PrefixOrSuffix(content = Text("£")))
             .withInputMode("decimal")
             .withWidth(Fixed10)
+            .withHint(HintViewModel(HtmlContent(messages("groupLiability.hint"))))
         )
 
         @govukButton(
