feedback url added

--- a/app/views/ReturnsCompleteView.scala.html
+++ b/app/views/ReturnsCompleteView.scala.html
@@ -65,7 +65,7 @@
     <h2 class="govuk-heading-m">@messages("returnsComplete.before-you-go")</h2>
     <p class="govuk-body">@messages("common.feedback.p1")</p>
     <p class="govuk-body">
-        <a href="#" class="govuk-link">@messages("common.feedback.survey")</a> @messages("common.feedback.survey.p1")
+        <a href="@controllers.auth.routes.AuthenticationController.signOut()" class="govuk-link">@messages("common.feedback.survey")</a> @messages("common.feedback.survey.p1")
     </p>
 </div>
 }
