DDCYLS-5513:Update content

--- a/app/views/TechnicalDifficultiesView.scala.html
+++ b/app/views/TechnicalDifficultiesView.scala.html
@@ -25,6 +25,7 @@
 
     <h1 class="govuk-heading-xl">@messages("technicalDifficulties.heading")</h1>
 
+    <p class="govuk-body">@messages("technicalDifficulties.tryAgain")</p>
     <p class="govuk-body">@messages("technicalDifficulties.guidance")</p>
 
 }
