--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -35,7 +35,7 @@
 )
 
 @(pageTitle: String, showBackLink: Boolean = true, timeout: Boolean = true, showSignOut: Boolean = true, useFullWidth: Boolean = false,
-refresh: Int = 0)(contentBlock: Html)(implicit request: Request[_], messages: Messages)
+refresh: Int = 0)(contentBlock: Html)(implicit request: RequestHeader, messages: Messages)
 
 @head = {
 
